--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore env file
+.env
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
