--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ public/uploads
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# ignore seacret_key_base
+/config/secrets.yml
