--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,10 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: fujihalab-system_prediction
+  pool: 5
+  username: root
+  password:
+  socket: /tmp/mysql.sock
