Change: 環境に応じてSlackの通知チャンネル先を変更するように機能変更

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 LAB_IP_ADDRESS="202.17.21.1"
-SLACK_WEBHOOK_URL="https://hooks.slack.com/services/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"
+PRODUCTION_SLACK_WEBHOOK_URL="https://hooks.slack.com/services/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"
+OTHER_SLACK_WEBHOOK_URL="https://hooks.slack.com/services/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"
 CLOUDINARY_CLOUD_NAME="hbcdjvrae"
 CLOUDINARY_API_KEY="766814168432485"
 CLOUDINARY_API_SECRET="0CEEv0Lm3UniV2CQytn7HU8qPdw"
