--- a/ansible/playbooks/templates/fujihalab-system.conf
+++ b/ansible/playbooks/templates/fujihalab-system.conf
@@ -9,7 +9,7 @@ upstream app_server {
 }
 server {
   listen 80;
-  server_name 52.196.58.47;(#アプリのElastic IPに変更してください)
+  server_name 52.196.58.47;
   # nginx so increasing this is generally safe...
   keepalive_timeout 5;
   # path for static files
@@ -26,6 +26,6 @@ server {
   # Rails error pages
   error_page 500 502 503 504 /500.html;
   location = /500.html {
-    root /var/www/rails/mumu/public; #自分のアプリケーション名に変更
+    root /var/www/rails/mumu/public;
   }
 }
