--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,16 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+staging:
+  <<: *default
+  adapter: mysql2
+  encoding: utf8
+  database: fujihalab-system_prediction
+  pool: 5
+  username: root
+  password: DInjFbrcY4&A
+  socket: /tmp/mysql.sock
+
 production:
   <<: *default
   adapter: mysql2
