--- a/ansible/playbooks/05-gitconfig.yml
+++ b/ansible/playbooks/05-gitconfig.yml
@@ -13,7 +13,6 @@
         - {name: "user.name",  value: "fujihalaboy" }
         - {name: "user.email", value: "fujiharabotaroh@gmail.com" }
         - {name: "ui.color",   value: "True" }
-        - {name: "InsteadOf",  value: "https://github.com/"}
 
     - name: ssh configにgithubの設定を追記
       blockinfile:
@@ -23,7 +22,7 @@
           Host github github.com
             Hostname github.com
             User git
-            IdentityFile ~/.ssh/aws_git_rsa
+            IdentityFile ~/.ssh/id_rsa
 
     - name: .ssh/configの権限変更
       file:
