--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ test:
 staging:
   <<: *default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
   database: fujihalab-system_staging
   pool: 5
   username: root
@@ -33,7 +33,7 @@ staging:
 production:
   <<: *default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
   database: fujihalab-system_production
   pool: 5
   username: root
